# juv

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  SKILL.md
.github/workflows/: publish.yml  website.yml
.jean-ci/pr-checks/: docs-website-check.md
docs/: jbx-docs-schema.md  jbx-json.md
scripts/: check-docs-website.sh  generate-agent-docs.py  set-release-version.py
skill-data/: jbx-alias.md  jbx-app.md  jbx-build.md  jbx-cache.md  jbx-catalog.md  jbx-check.md  jbx-docs.md  jbx-doctor.md  jbx-export.md  jbx-fetch.md  jbx-fmt.md  jbx-graph.md  jbx-info.md  jbx-init.md  jbx-install.md  jbx-jdk.md  jbx-publish.md  jbx-resolve.md  jbx-rewrite.md  jbx-run.md  jbx-search.md  jbx-skill.md  jbx-template.md  jbx-test.md  jbx-trust.md  jbx.md
skill-data/jbx-alias/: SKILL.md
skill-data/jbx-app/: SKILL.md
skill-data/jbx-build/: SKILL.md
src/: jdk.rs  juvx.rs  lib.rs  main.rs  maven_tool.rs  resolver.rs
tests/: app_install_command.rs  build_command.rs  cache_command.rs  catalog_alias_command.rs  check_command.rs  directives.rs  docs_command.rs  doctor_command.rs  export_command.rs  external_catalog_command.rs  fmt_command.rs  graph_command.rs  info_command.rs  info_fields_and_cache_batch.rs  init_command.rs  jdk_command.rs  juvx_command.rs  maven_tool_command.rs  metadata_info_command.rs  native_export_command.rs  publish_command.rs  publish_install_command.rs  remote_trust_batch.rs  rewrite_command.rs  run_java.rs  runtime_option_batch.rs  search_command.rs  skill_command.rs  test_command.rs
website/: Dockerfile  README.md  nginx.conf  package.json
(+95 files in other folders)
