[package]
name = "doj"
version = "0.1.0"
edition = "2021"
description = "do Java: a Rust port of JBang"
repository = "https://github.com/telegraphic-dev/doj"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
regex = "1.10"
serde_json = "1.0"
sha2 = "0.10"
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.10"
