[package]
name = "juv"
version = "0.1.0"
edition = "2021"
description = "juv: a Rust port of JBang"
repository = "https://github.com/telegraphic-dev/juv"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
quick-xml = "0.37"
regex = "1.10"
serde_json = "1.0"
sha1 = "0.10"
sha2 = "0.10"
ureq = "2.12"
walkdir = "2.5"
which = "7.0"

[dev-dependencies]
tempfile = "3.10"
