[package]
name = "juv"
version = "0.0.0"
edition = "2021"
description = "juv: a Rust port of JBang"
repository = "https://github.com/telegraphic-dev/juv"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
quick-xml = "0.37"
regex = "1.10"
serde_json = { version = "1.0", features = ["preserve_order"] }
base64 = "0.22"
sha1 = "0.10"
sha2 = "0.10"
md-5 = "0.10"
ureq = "2.12"
flate2 = "1.1"
tar = "0.4"
zip = "2.4"
walkdir = "2.5"
which = "7.0"

[dev-dependencies]
tempfile = "3.10"
